fix margins around midpage prompt w/ image on mobile and desktop

--- a/web/app/themes/ilsfa/assets/styles/components/_shared.scss
+++ b/web/app/themes/ilsfa/assets/styles/components/_shared.scss
@@ -38,7 +38,7 @@
 
 .midpage-prompt-with-image {
   background: $blurple;
-  margin-top: $mobile-global-padding;
+  margin: $mobile-global-padding 0;
   .user-content {
     &,
     h2,h3 {
@@ -61,7 +61,7 @@
   }
   // Desktop styles
   @include media-md {
-    margin-top: grid(12);
+    margin: grid(6) 0 grid(8);
     .text {
       padding: grid(12) columns(2,10);
     }
